# cmake-project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json  setup-cross-compile-env.sh
.toolchain/: oecore-x86_64-core2-64-toolchain-10.0.sh
cmake/: Build.clang-tidy.in  ClangTidyStaticAnalyzer.cmake  CompilerOptions.cmake  NilrtCrossCompileToolchain.cmake  NinjaMultiConfig.cmake
src/: CMakeLists.txt  main.cpp
